syntax = "proto3";

option go_package = ".;pb";
package pb;

message Video{
  int64 Id = 1;
  int64 AuthorId =2;
  string PlayUrl = 3;
  string CoverUrl =4;
  int64 FavoriteCount =5;
  int64 CommentCount =6;
  string Title = 7;
}

message FeedRequest{
  int64 latest_time = 1;
}
message FeedResponse{
  repeated Video List = 1;
}


service FeedService{
  rpc Feed(FeedRequest) returns (FeedResponse);
}